# nailclipper

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  conanfile.py  sonar-project.properties  test.vtu
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  main.cpp  test_stl.h
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
curaengine-lite/: Angle.h  CMakeLists.txt  Coord_t.h  ExtrusionJunction.h  ExtrusionLine.h  IntPoint.h  LinearAlg2D.cpp  LinearAlg2D.h  ListPolyIt.cpp  ListPolyIt.h  Point3.cpp  Point3.h  PolyLineStitcher.cpp  PolyLineStitcher.h  PolygonsPointIndex.h  Ratio.h  Slicer.cpp  Slicer.h  SparseGrid.h  SparsePointGrid.h  SquareGrid.cpp  SquareGrid.h  math.h  polygon.cpp  polygon.h
curaengine-lite/include/curaengine-lite/: Angle.h  ExtrusionJunction.h  ExtrusionLine.h  Format.h  IntPoint.h  LinearAlg2D.h  ListPolyIt.h  Point3.h  PolyLineStitcher.h  PolygonsPointIndex.h  SparseGrid.h  SparsePointGrid.h  SquareGrid.h  SymmetricPair.h  polygon.h
curaengine-lite/src/: LinearAlg2D.cpp  ListPolyIt.cpp  Point3.cpp  PolyLineStitcher.cpp  Slicer.cpp  SquareGrid.cpp  polygon.cpp
include/NailClipper/: Clipper.h  Concepts.h  Conversion.h  Types.h  concepts.h  conversion.h  types.h
include/NailClipper/Conversion/: VTU.h
include/NailClipper/Mesh/: FileTypes.h  Mesh.h
include/NailClipper/Types/: Point.h
include/NailClipper/Views/: Points.h  Scale.h  Slice.h  Transform.h  Translate.h
include/NailClipper/containers/: mesh.hpp  paths.hpp  point.hpp  point_container.hpp  winding.hpp
include/NailClipper/conversion/: vtu.h
include/NailClipper/files/: filetypes.hpp  stl.hpp
include/NailClipper/functional/: compare.h
include/NailClipper/mesh/: filetypes.h  mesh.h
include/NailClipper/types/: char_range_literal.hpp  generic.hpp  geometry.hpp  get.hpp  type_traits.hpp
include/NailClipper/views/: elem_wise_op.h  filter.h  partition.h  path.hpp  rotate.h  scale.h  segments.hpp  sort.h  transform.h  translate.h
playground/: CMakeLists.txt  main.cpp
src/: Clipper.cpp  Mesh.cpp  mesh.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  catch_main.cpp  constexpr_tests.cpp  main.cpp  test_container.cpp  test_io.cpp  test_mesh.cpp  test_stl.h  test_views.cpp  tests.cpp
tests/resources/: simple_polygon_stack.vtu  test.stl
